jEdit 5.2 version history
       (changes since jEdit 5.1.0)
:encoding=UTF-8:

{{{ Version 5.2pre2

Thanks to Björn "Vampire" Kautler and Matthieu Casanova for contributing to this
release.

{{{ Bug Fixes

- Fix a bug preventing from removing an unloaded plugin
  (#3877 - Matthieu Casanova)

- The native splashscreen is removed as it was not possible to disable it
  (#3876 - Matthieu Casanova)

}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Dale Anson, Thomas Meyer,
Patrick Eibl, László Schmidt, Zsombor Franczia, Bence Pintér, Makarius,
Benjamin Zengin, Yihua Zhang, Marc Häfner, EdorFaus, Jordan Miner,
Thiemo Kellner, Tim Blackler, Alan Ezust, and Eric Le Lay for contributing to
this release.

{{{ Bug Fixes

- Fix for bug #3843: Russian localization breaks Search dialog

- Fixed Whole word search (bug #3824, patch #516 - Benjamin Zengin)

- Fixed the systray not added on EDT thread (Matthieu Casanova)

- Fix the integration with Unity and other Linux Desktop Environments,
  broken by patch #464 (Björn "Vampire" Kautler)

- Reload optionally dependent plugins when a plugin is unloaded.
  (bug #3807 - Dale Anson)

- Applied patch #513 (Makarius), plus some additional cleanup of setting
  the look and feel (Dale Anson)

- Fixed a bug in pluginmanager: transitive deps not installed when filtering
  (bug #3825 - Eric Le Lay)

- Fix java installer bug: Installing from jedit5.1.0install.jar failure
  (bug #3837 - Eric Le Lay)

}}}
{{{ API Changes

- jEdit now depends on Java 1.7

- StandardUtilities.objectsEqual() is deprecated as Objects.equals() does the
  same job in Java 7 (Matthieu Casanova)

- New method: VFSFile.getModified() which allows sorting by date in the FSB
  for other VFSs (plugin patch #161 Yihua Zhang)

- GUIUtilities.getShortcutLabel() has a second boolean argument to specify
  whether platform modifier symbols are desired or not. (patch #514 Makarius)
